# compe-561-spring-25

./: Dockerfile  LICENSE  README.md  main.py
demo-app/: README.md  example.json  pyproject.toml  ugur.py
demo-app/src/demo_app/: main.py
front-end-exercises/: index.html  style.css
